CSS fix to ensure the CodeMirror does not scroll the entire window & that it only adds scrollbar to itself

--- a/Nucache.Explorer.Client/css/styles.css
+++ b/Nucache.Explorer.Client/css/styles.css
@@ -41,7 +41,7 @@
   }
 
 .CodeMirror {
-    height: auto;
+    height: calc(100vh - 100px);
     margin-top: 10px;
 }
 
